--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -13,7 +13,7 @@
         <a class="nav-link" href="{{ url_for('about') }}">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('secure_page') }}">Secure_page</a>
+        <a class="nav-link" href="{{ url_for('secure_page') }}">Secure Page</a>
       </li>
     </ul>
 
